fixing paths and now reading the gigapan id and dataset from a hidden div on the page instead of from URL params

--- a/css/timelapse.css
+++ b/css/timelapse.css
@@ -24,7 +24,7 @@ body, p, table, tr, td, img{
 }
 
 #timelapse {
- cursor: url("cursors/openhand.png"),move
+ cursor: url("../css/cursors/openhand.png"),move
 }
 
 #mouse_debug_info {
